# RustPDF-core

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs
.doc/: ONLYOFFICE_PDF_EDIT_FLOW.md  ONLYOFFICE_PDF_FLOW.md  PROGRESS_REPORT.md  REBUILD_PLAN.md  WRITER_EDITOR_REPORT.md  XPDF_ANALYSIS.md  annotation-flatten-2026-06-05.md  annotation-types-2026-06-14.md  architecture-deep-dive-2026-06-05.md  bold-italic-metrics-2026-06-06.md  bold-repaint-2026-06-07.md  cid-font-rendering-fix-2026-05-27.md  commit-render-perf-2026-06-05.md  compliance-pdfa-2026-06-16.md  core-fonts-fallback-report.md  crypto-aes256-2026-06-05.md  deferred-flush-dirty-fix-2026-06-06.md  delete-all-shortcut-2026-06-05.md  display-2026-05-25.md  edit-enter-speed-2026-06-03.md  edit-render-crop-fix-2026-06-02.md  edit-render-perf-2026-06-03.md  edit-render-speed-2026-06-04.md  edit-session-xobject-2026-05-26.md  edit-stability-watermark-2026-06-07.md  edit-text-commit-fix-2026-06-02.md  edit-text-drag-select-2026-06-04.md  edit-text-format-apply-live-2026-06-05.md  editor-deferred-flush-2026-06-06.md  editpdf-2026-05-25.md  extract-pages-2026-06-06.md  ffi-mobile-2026-06-19.md  final-report-2026-05-24.md  fix-register-page-font-indirect-resources-2026-06-05.md  flush-on-commit-2026-06-07.md  font-decrypt-2026-06-07.md  form-flatten-2026-06-17.md  formatting-commit-fix-2026-06-08.md  forms-fdf-2026-06-12.md  forms-phase1-2026-06-06.md  (+63 more)
assets/: sRGB_IEC61966-2-1.icc
benches/: render_bench.rs
phase/: README.md  phase1-aes256-decryption.md  phase1-annotation-flatten.md  phase1-form-filling.md  phase1-full-text-search.md  phase1-licensing.md  phase1-page-split.md  phase2-bookmarks-write.md  phase2-digital-signatures.md  phase2-fdf-xfdf.md  phase2-missing-annotation-types.md  phase2-optional-content-groups.md  phase2-pdf-optimization.md  phase2-pdfa-compliance.md  phase2-permissions-enforcement.md  phase2-soft-masks.md  phase3-form-flatten.md  phase3-javascript-actions.md  phase3-regex-search.md  phase3-rest-api.md  phase3-watermark-api.md  phase4-mobile-sdks.md  phase4-xfa-forms.md  sdk-phase0-js-ts-wrapper.md  sdk-phase0-npm-publish.md
scripts/: generate-key.sh
src/: error.rs  lib.rs
src/compliance/: icc.rs  mod.rs  pdfa.rs  xmp.rs
src/content/: graphics_state.rs  interpreter.rs  mod.rs  operator.rs  operators.rs  text_state.rs
src/crypto/: aes256.rs  handler.rs  mod.rs  rc4.rs
src/display/: mod.rs
src/document/: catalog.rs  metadata.rs  mod.rs  name_tree.rs  outline.rs  outline_writer.rs  page.rs  page_labels.rs  structure.rs  text_string.rs  xmp.rs
src/editor/: annotation.rs  content_draw.rs  document_editor.rs  edit_session.rs  merge.rs  metadata_editor.rs  mod.rs  page_editor.rs  redact.rs  remap.rs  text_commit.rs  text_commit_runs.rs  text_edit_engine.rs  text_editor.rs  text_encode.rs  text_model.rs  text_shape.rs  text_style.rs  watermark.rs
src/ffi/: c_api.rs  mod.rs  pdf_core.udl  uniffi_bridge.rs
src/fonts/: cff.rs  cmap.rs  encoding.rs  font_cache.rs  mod.rs  standard.rs  truetype.rs  type1.rs  types.rs
src/forms/: acroform.rs  appearance.rs  fdf.rs  filler.rs  mod.rs  reader.rs
src/js/: actions.rs  engine.rs  mod.rs  pdf_api.rs
src/license/: mod.rs  watermark.rs
src/parser/: filters.rs  lexer.rs  mod.rs  objects.rs  xref.rs
src/render/: canvas.rs  color.rs  font_resolver.rs  glyph_cache.rs  image.rs  mod.rs  page_renderer.rs  path_render.rs  shading.rs  tile.rs
src/server/: auth.rs  handlers.rs  mod.rs  multipart.rs  routes.rs
src/signatures/: cms.rs  mod.rs  signer.rs  verifier.rs
src/streaming/: mod.rs
src/text/: extractor.rs  layout.rs  mod.rs  search.rs
src/wasm/: document.rs  editor.rs  mod.rs  streaming.rs  text_edit.rs
src/writer/: content_builder.rs  document.rs  font.rs  font_subset.rs  image.rs  mod.rs  optimizer.rs  page.rs  serializer.rs  streams.rs  xref.rs
tests/: TESTING.md  bookmarks.rs  edit_render_block.rs  gen_aes256_fixture.py  gen_fixtures.py  gen_restricted_fixture.py  merge_redact.rs  real_pdf.rs  signatures.rs  streaming.rs  wasm_api.rs  write_edit.rs
tests/fixtures/: test_cert.der  test_key.der
