[package]
name = "pdf-core"
version = "0.1.0"
edition = "2021"
description = "A Rust-based PDF processing core library targeting WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "7"
thiserror = "1"
flate2 = "1.0"
weezl = "0.1"
log = "0.4"
# Insertion-order-preserving map for PDF dictionaries (ISO 32000-1 §7.3.7):
# keeps /Filter↔/DecodeParms pairing and signed-dict byte order stable.
# Pure-Rust, WASM-compatible, O(1) lookups like HashMap.
indexmap = "2"
# Cross-platform RwLock (real lock on native, single-threaded shim on WASM) so
# PdfDocument's caches are Sync without a cfg split — enables parallel render.
parking_lot = "0.12"
md-5 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true }
hmac = { version = "0.12", optional = true }
base64 = { version = "0.21", optional = true }
rsa = { version = "0.9", optional = true, features = ["sha2"] }
x509-cert = { version = "0.2", optional = true }
# Random IV source for AES-CBC encryption on write. The `js` feature routes to
# `crypto.getRandomValues` on wasm32; native targets use the OS RNG.
getrandom = { version = "0.2", features = ["js"], optional = true }
tiny-skia = { version = "0.11", optional = true, default-features = false, features = ["std"] }
fontdue = { version = "0.9", optional = true }
zune-jpeg = { version = "0.4", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_log = { version = "1", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
rquickjs = { version = "0.6", optional = true, features = ["bindgen", "classes", "properties"] }
# Pure-Rust, WASM-compatible regex engine. Used by the Pro-tier regex search feature.
regex = { version = "1", optional = true, default-features = false, features = ["std", "unicode-perl", "unicode-case"] }
# REST API server (Enterprise feature, native only).
axum = { version = "0.7", optional = true, features = ["multipart"] }
tokio = { version = "1", optional = true, features = ["full"] }
tower-http = { version = "0.5", optional = true, features = ["cors", "limit"] }
serde_json = { version = "1", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
# OpenAPI spec generation from utoipa proc-macro annotations.
utoipa = { version = "4", optional = true, features = ["axum_extras"] }
# PNG encoding for the /render endpoint (RGBA → PNG via pure-Rust encoder).
png = { version = "0.17", optional = true }
# Logger for the pdf-server binary.
env_logger = { version = "0.11", optional = true }
# Mobile SDK: uniffi generates Swift/Kotlin bindings from Rust proc-macro annotations.
# Language bindings are produced at SDK-build time with `uniffi-bindgen generate`.
# Native only — not included in any WASM feature set.
uniffi = { version = "0.25", optional = true }

[features]
crypto = ["dep:md-5", "dep:sha2", "dep:aes", "dep:cbc", "dep:hmac", "dep:base64", "dep:getrandom"]
render = ["dep:tiny-skia", "dep:fontdue", "dep:zune-jpeg"]
writer = []
forms  = ["writer"]
signatures = ["dep:rsa", "dep:x509-cert", "crypto", "writer"]
js-actions = ["dep:rquickjs"]
search = ["dep:regex"]
# C FFI layer — raw extern "C" functions for native mobile integration (Phase 4a).
# Excludes all WASM targets; guard with #[cfg(not(target_arch = "wasm32"))].
ffi = ["search"]
# Mobile SDK — C FFI + uniffi-generated Swift/Kotlin bindings (Phase 4b/4c).
# Enterprise tier. Native only.
mobile = ["ffi", "dep:uniffi", "search"]
# WASM bridge: exposes #[wasm_bindgen] types for JS integration.
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:console_log", "dep:console_error_panic_hook", "writer", "forms", "crypto", "js-actions", "search"]
# WASM bridge with page rendering included (adds ~800 KB to the WASM binary).
wasm-render = ["wasm", "render"]
# Viewer-only WASM build: parse, render, text extract. No editor, writer, forms, or crypto.
wasm-viewer = ["dep:wasm-bindgen", "dep:js-sys", "dep:console_log", "dep:console_error_panic_hook", "render"]
# REST API server — Enterprise tier, native only.
# render is NOT listed here because it requires the core-fonts directory at
# build time (include_bytes!). Enable it separately with --features server,render.
server = ["dep:axum", "dep:tokio", "dep:tower-http", "dep:serde_json", "dep:serde", "dep:png", "dep:env_logger", "dep:utoipa", "writer", "forms", "crypto", "search"]

[[bin]]
name = "pdf-inspect"
path = "src/bin/pdf_inspect.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"
required-features = ["crypto"]

[[bin]]
name = "pdf-server"
path = "src/bin/pdf_server.rs"
required-features = ["server"]

[dev-dependencies]
pretty_assertions = "1"
criterion = { version = "0.5", features = ["html_reports"] }
rand_core = { version = "0.6", features = ["getrandom"] }
axum-test = "14"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }

[[bench]]
name = "render_bench"
harness = false
required-features = ["render"]
